🍏 Fix action bar button vertical alignment in Safari

--- a/src/assets/css/components/_tooltip.scss
+++ b/src/assets/css/components/_tooltip.scss
@@ -1,3 +1,7 @@
+.v-popover {
+  line-height: 0;
+}
+
 .tooltip {
   display: block !important;
   z-index: 10000;
